# vimo

./: Cargo.toml  README.md  data.txt  log4rs.yml
src/: editor.rs  main.rs
src/editor/: document.rs  mod.rs  row.rs  status.rs  terminal.rs  utils.rs
