[package]
name = "vimo"
version = "0.1.0"
edition = "2021"
authors = ["Nikhil kashyap <nmknikhilkashyap@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "3.0.0"
unicode-segmentation = "1.12.0"


[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]

